Implemented /board/map/{region}/{country}
