# resources/validators.py
@@ -1,5 +1,5 @@
 from pydantic import BaseModel
-from typing import List
+from typing import Dict, List, Optional
 
 # Models used to validate the request body
 # https://fastapi.tiangolo.com/tutorial/body/
@@ -11,9 +11,13 @@ class BoardMapRegion(BaseModel):
 
 # https://stackoverflow.com/questions/68650162/fastapi-receive-list-of-objects-in-body-request
 # https://stackoverflow.com/questions/60844846/read-a-body-json-list-with-fastapi
-def bodyBoardMapRegion(items: List[BoardMapRegion]):
-    pass
-
 # https://stackoverflow.com/questions/58068001/python-pydantic-using-a-list-with-json-objects
 class BodyBoardMapRegion(BaseModel):
     __root__: List[BoardMapRegion]
+
+# https://stackoverflow.com/questions/63272595/is-it-possible-to-have-arbitrary-key-names-in-pydantic
+class BodyBoardMapRegionCountry(BaseModel):
+    stability: int
+    isConflictive: bool
+    isOilProducer: bool
+    influence: Dict[str, Optional[int]]
